k8s/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: vd-designer
  namespace: viewdefinition

spec:
  serviceName: "vd-designer"
  replicas: 1
  selector:
    matchLabels:
      service: vd-designer

  template:
    metadata:
      labels:
        service: vd-designer

    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: vd-designer-db
          image: postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: vd-designer-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - bash
                - "-c"
                - PGPASSWORD=$POSTGRES_PASSWORD psql -U $POSTGRES_USER -d $POSTGRES_DB -c "select 42"
            initialDelaySeconds: 10
            periodSeconds: 3
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3

        - name: vd-designer-app
          image: ghcr.io/aidbox/vd-designer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi

  volumeClaimTemplates:
    - metadata:
        name: vd-designer-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
