k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vd-designer
  namespace: viewdefinition
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    service: vd-designer
